# env

./: .gitignore  .hgignore  DEV.rst  LOG.rst  Makefile  OPTICKS.bash  README  README.rst  TODO  TODO.rst  __init__.py  build.scons  conf.py  env.bash  env.py  fabfile.py  g4daeview  index.rst  install.rst  main.scons  month.sh  opticks-failed-build.bash  opticks.bash  opticksdev.bash  optickswin.bash  qxml  rstbash.py  setup.py  sweep.py
chroma/ChromaPhotonList/: CMakeLists.txt  ChromaPhotonList.cc  ChromaPhotonList.hh  chromaphotonlist.bash  cpl.bash  cpl.py  cpl.sh  cpl_responder.py  cpl_responder.sh  responder.py  responder.sh
chroma/ChromaPhotonList/Chroma/: ChromaPhotonList.hh
chroma/ChromaPhotonList/src/: ChromaPhotonList.cc
chroma/ChromaZMQRootTest/: CMakeLists.txt  ChromaZMQRootTest.cc  czrt.bash  czrt.sh
chroma/G4DAEChroma/: CMakeLists.txt  G4DAEArrayHolder.hh  G4DAEChroma.rst  config.json  flags.json  gdc.bash
chroma/G4DAEChroma/G4DAEChroma/: DemoG4DAECollector.hh  G4DAEArray.hh  G4DAEArrayHolder.hh  G4DAEBuffer.hh  G4DAECerenkovPhoton.hh  G4DAECerenkovPhotonList.hh  G4DAECerenkovStep.hh  G4DAECerenkovStepList.hh  G4DAEChroma.hh  G4DAEChroma.rst  G4DAEChromaPhotonList.hh  G4DAEChroma_implementation.rst  G4DAECollector.hh  G4DAECommon.hh  G4DAEDatabase.hh  G4DAEDayabay.hh  G4DAEDetector.hh  G4DAEFoton.hh  G4DAEFotonList.hh  G4DAEGeometry.hh  G4DAEHit.hh  G4DAEHitList.hh  G4DAEList.hh  G4DAEManager.hh  G4DAEMaterialMap.hh  G4DAEMetadata.hh  G4DAEPhoton.hh  G4DAEPhotonList.hh  G4DAEPhotonListOld.hh  G4DAEPhotons.hh  G4DAEPmtHit.hh  G4DAEPmtHitList.hh  G4DAEProp.hh  G4DAEPropList.hh  G4DAEScintillationPhoton.hh  G4DAEScintillationPhotonList.hh  G4DAEScintillationStep.hh  G4DAEScintillationStepList.hh  G4DAESensDet.hh  G4DAESerializable.hh  (+11 more)
chroma/G4DAEChroma/src/: DemoG4DAECollector.cc  G4DAEArray.cc  G4DAEArrayHolder.cc  G4DAEBuffer.cc  G4DAECerenkovPhoton.cc  G4DAECerenkovPhotonList.cc  G4DAECerenkovStep.cc  G4DAECerenkovStepList.cc  G4DAEChroma.cc  G4DAEChromaPhotonList.cc  G4DAECollector.cc  G4DAECommon.cc  G4DAEDatabase.cc  G4DAEDayabay.cc  G4DAEDetector.cc  G4DAEFoton.cc  G4DAEFotonList.cc  G4DAEGeometry.cc  G4DAEHit.cc  G4DAEHitList.cc  G4DAEManager.cc  G4DAEMaterialMap.cc  G4DAEMetadata.cc  G4DAEPhoton.cc  G4DAEPhotonList.cc  G4DAEPhotonListOld.cc  G4DAEPhotons.cc  G4DAEPmtHit.cc  G4DAEPmtHitList.cc  G4DAEProp.cc  G4DAEPropList.cc  G4DAEScintillationPhoton.cc  G4DAEScintillationPhotonList.cc  G4DAEScintillationStep.cc  G4DAEScintillationStepList.cc  G4DAESensDet.cc  G4DAESerializable.cc  G4DAESerializablePhotons.cc  G4DAESocket.cc  G4DAESocketBase.cc  (+9 more)
chroma/G4DAEChroma/tests/: G4DAEChromaTest.cc  G4DAEChromaTest.sh
chroma/G4DAEChromaTest/: CMakeLists.txt  G4DAEChromaTest.cc  chknpy.py  gdct.bash  root2npy.cc
geant4/examples/lxe/: CMakeLists.txt  GNUmakefile  LXe.cc  lxe.bash  lxe_gmake.bash  test.mac
geant4/examples/lxe/include/: ChromaPhotonList_LinkDef.h  LXeStackingAction.hh  MyTMessage_LinkDef.h
geant4/examples/lxe/src/: ChromaPhotonList.cc  LXeStackingAction.cc  MyTMessage.cc  ZMQRoot.cc
geant4/geometry/gdml/gdml2wrl/: CMakeLists.txt  gdml2wrl.rst
geant4/mocksim/: .mocksim.cc.swp  CMakeLists.txt  mocksim.bash  mocksim.cc  mocksim.sh
graphics/gui/imguitest/: CMakeLists.txt  imguitest.bash  main.cpp
graphics/oglplus/oglplustest/: CMakeLists.txt  oglplustest.bash
graphics/opengl/instcull/: Att.cc  Att.hh  BB.cc  BB.hh  Box.cc  Box.hh  Buf.cc  Buf.hh  Buf4.cc  Buf4.hh  CMakeLists.txt  Cam.cc  Cam.hh  Comp.cc  Comp.hh  Cube.cc  Cube.hh  CullShader.cc  CullShader.hh  DEMO_API_EXPORT.hh  Demo.cc  Demo.hh  Frame.cc  Frame.hh  G.cc  G.hh  GU.cc  GU.hh  Geom.cc  Geom.hh  ICDemo.cc  ICDemo.hh  InstRenderer.cc  InstRenderer.hh  InstShader.cc  InstShader.hh  LODCullShader.cc  LODCullShader.hh  Pos.cc  Pos.hh  (+25 more)
graphics/opengl/instcull/tests/: BBTest.cc  BoxTest.cc  CMakeLists.txt  CamTest.cc  CompTest.cc  GeomTest.cc  PrimTest.cc  TraTest.cc  VueTest.cc  icdemo.cc  instElemUBO.cc  instance.cc  txf.cc  (+10 more)
graphics/opengl/txf/: CMakeLists.txt  txf.bash  txf.cc
graphics/openmeshclient/: Args.cc  Args.hh  CMakeLists.txt  omc.bash  omc_API_EXPORT.hh
graphics/openmeshclient/tests/: ArgsTest.cc  CMakeLists.txt  DeleteFaceTest.cc
graphics/thrust_opengl_interop/: CMakeLists.txt  throgl.bash  throgl.cu  thrust_opengl_interop.cu
graphics/vl/vltest/: CMakeLists.txt  vltest.bash  vltest.cc
graphics/yoctogl/: CMakeLists.txt  ygltf_reader.cc  yoctogl.bash
messaging/cjson/: CMakeLists.txt  cjs.bash  out.js  testcjson.c
messaging/cjson/cJSON/: js.hh
messaging/cjson/src/: js.cc
messaging/cjson/tests/: CMakeLists.txt  js.cc  js.hh  jstest.cc  out.js  testcjson.c  testcjson.py
network/asiozmqtest/: CMakeLists.txt  asiozmqtest.bash  npyBuffer.cc  npyBuffer.hh  npyQueue.cc  npyQueue.hh  npyasiozmqtest.cc  npyworker.cc  npyworker.hh
numerics/npyclient/: CMakeLists.txt  NPYClient.cc  npc.bash
numpy/cnpytest/: CMakeLists.txt  cnpytest.bash  cnpytest.cc
nuwa/DataModel/: CMakeLists.txt  datamodel.bash
nuwa/DataModelTest/: CMakeLists.txt  datamodeltest.bash  test.cc
nuwa/MockNuWa/: CMakeLists.txt  DsChromaG4DAECollector.cc  DsChromaG4DAECollector.hh  DsChromaRunAction_BeginOfRunAction.icc  DybG4DAECollector.cc  DybG4DAECollector.h  MockNuWa.cc  SensDet.cc  SensDet.h  TrojanSensDet.cc  TrojanSensDet.h  ctrl.py  db.py  mocknuwa.bash  mocknuwa.py  mocknuwa.sh  query.py  test.cc
optix/OptiX_301/sample1manual/: CMakeLists.txt  optixsample1.bash
sqlite/rapsqlite/tests/: CMakeLists.txt  testrapsqlite.cc  testrapsqlitejs.cc
tools/nanobind_check/: .gitignore  CMakeLists.txt  add.cpp  add.h  dog.cpp  dog.h  main.py  my_ext.cpp  nanobind_check.py  nanobind_check.sh  pyproject.toml
vr/ovrminimal/: CMakeLists.txt  ovrminimal.bash
windows/importclient/: CMakeLists.txt  DemoClient.cc  importclient.bash
zmqroot/: CMakeLists.txt  Makefile  responder.py  responder.sh  serialize.py  zmqroot.bash
zmqroot/ZMQRoot/: MyTMessage.hh
zmqroot/include/: MyTMessage.hh  ZMQRoot.hh
zmqroot/src/: MyTMessage.cc  ZMQRoot.cc
zmqroot/tests/: client.cc  worker.cc
(+4015 files in other folders)
